2007-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-summary-command-nosave)
	(gnus-article-read-summary-keys): Don't use 3rd arg of pop-to-buffer.

2007-08-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-maximum-newsgroup): New variable.

	* gnus-agent.el (gnus-agent-fetch-headers): Limit the range of articles
	according to gnus-maximum-newsgroup.

	* gnus-sum.el (gnus-articles-to-read, gnus-list-of-unread-articles)
	(gnus-list-of-read-articles, gnus-sequence-of-unread-articles): Limit
	the range of articles according to gnus-maximum-newsgroup.

2007-08-14  Tassilo Horn  <tassilo@member.fsf.org>

	* gnus-art.el (gnus-sticky-article): Fixed problems described in
	<b4mps1qitio.fsf@jpl.org> on ding.  Thanks to Katsumi.
	Don't perform gnus-configure-windows here; reuse existing sticky
	article buffer.

	* gnus-sum.el (gnus-summary-display-article): Setup article buffer if
	it doesn't exist in gnus-article-mode.

2007-08-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-agent.el (gnus-agent-decoded-group-names): New variable.
	(gnus-agent-decoded-group-name): New function.
	(gnus-agent-group-path, gnus-agent-group-pathname): Use it.
	(gnus-agent-expire-group-1): Use it; decode group name in messages.

2007-08-12  Tassilo Horn  <tassilo@member.fsf.org>

	* gnus-sum.el (gnus-summary-article-map, gnus-summary-make-menu-bar):
	Add binding for gnus-sticky-article.
	(gnus-summary-exit): Don't kill sticky article buffers.

	* gnus-art.el (gnus-sticky-article-mode): New mode to generate a sticky
	article buffer.
	(gnus-sticky-article, gnus-kill-sticky-article-buffer)
	(gnus-kill-sticky-article-buffers): New commands.

2007-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-xref-number-is-evil): New server variable.
	(nntp-find-group-and-number): If it is non-nil, don't trust article
	numbers in the Xref header.

2007-08-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-agent.el (gnus-agent-read-group): New function.